<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="30dp"
    android:orientation="horizontal"
    android:layout_marginTop="-45dp"
    android:layout_marginBottom="5dp"
    android:background="@color/transparent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/whole_shaixuan">

    <LinearLayout
        android:id="@+id/ll_chooseprice"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:text="@string/mainlist_shai_price"
            style="@style/mainlist_shai"/>

        <ImageView
            android:src="@drawable/paixu"
            android:layout_width="23dp"
            android:layout_height="23dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_choosetype"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:text="@string/mainlist_shai_type"
           style="@style/mainlist_shai"/>

        <ImageView
            android:src="@drawable/shaixuan"
            android:layout_width="23dp"
            android:layout_height="23dp"/>

        <TextView
            android:id="@+id/tv_type"
            android:text=":全部类型"
            style="@style/mainlist_shai"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_choosetime"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:text="@string/mainlist_shai_time"
            style="@style/mainlist_shai"/>

        <ImageView
            android:src="@drawable/paixu"
            android:layout_width="23dp"
            android:layout_height="23dp"/>
    </LinearLayout>



</LinearLayout>
