<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_return_intra"
        android:layout_width="fill_parent"
        app:titleTextColor="@color/white"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        android:layout_height="45sp"
        android:background="@color/personalcolor"
        app:navigationIcon="@drawable/back">
    </androidx.appcompat.widget.Toolbar>

    <com.example.zbusst.MyViews.MyScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="vertical"
        android:fadingEdge="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/detail_good_pic_intra"
                android:src="@drawable/pictureloading"
                android:layout_width="fill_parent"
                android:layout_height="450dp" />



            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                android:background="@color/backgroundcolor">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_whitecard"
                    android:padding="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/detail_good_price_intra"
                        android:text="¥22.02"
                        android:textColor="@color/mainlist_goodtype"
                        android:textSize="30dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:orientation="horizontal"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/detail_good_type_intra"
                            android:text="代拿快递"
                            style="@style/mainlist_goodtype"
                            android:background="@drawable/shape_mainlist_goodtype"/>
                        <TextView
                            android:id="@+id/detail_good_intro_intra"
                            android:text="大大爱上的解放军wife害怕温柔结构化覆盖哥哥大大和任何大大大日太阳花如意大大大法文歌大"
                            style="@style/mainlist_goodintroduct"
                            android:textSize="16dp"
                            android:textStyle="bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_whitecard"
                    android:padding="10dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:text="@string/detail_good_beizhu"
                            android:layout_marginRight="30dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/detail_good_beizhu_intra"
                            android:text="雅虎好简单翻江倒简单翻江倒海太空舱杰克丹尼经费v聚"
                            android:textColor="@color/black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:text="@string/detail_good_hostname"
                            android:layout_marginRight="30dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/detail_good_hostname_intra"
                            android:text="云烟成雨"
                            android:textColor="@color/black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:text="@string/detail_good_uploadtime"
                            android:layout_marginRight="30dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/detail_good_uploadtime_intra"
                            android:text="2022-10-20 22:55:33"
                            android:textColor="@color/black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_whitecard"
                    android:padding="10dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:text="买家名称"
                            android:layout_marginRight="30dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/detail_good_buyername"
                            android:text="雅丹尼经费v聚"
                            android:textColor="@color/black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:text="接单时间"
                            android:layout_marginRight="30dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/detail_good_buyertime"
                            android:text="雅丹尼经费v聚"
                            android:textColor="@color/black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:text="订单状态"
                            android:layout_marginRight="30dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/detail_good_state"
                            android:text="雅丹尼经费v聚"
                            android:textColor="@color/black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>


        </LinearLayout>
    </com.example.zbusst.MyViews.MyScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:paddingRight="20dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:background="@drawable/shape_line"
        android:orientation="horizontal">

        <Button
            android:id="@+id/detail_btn_delete"
            android:text="删除订单"
            android:layout_width="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:focusable="false"
            android:background="@drawable/shape_mylaunch_btn_click"
            android:layout_weight="1"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/detail_btn_urge"
            android:layout_width="0dp"
            android:text="催他一下"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/shape_mylaunch_btn_click"
            android:gravity="center"
            android:focusable="false"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/detail_btn_compelte"
            android:layout_width="0dp"
            android:text="确认完成"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:focusable="false"
            android:background="@drawable/shape_mylaunch_btn_click"
            android:gravity="center"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/detail_loading_intra"
        android:src="@drawable/loading"
        android:layout_gravity="center"
        android:layout_marginTop="-400dp"
        android:layout_width="50dp"
        android:layout_height="50dp"/>

</LinearLayout>
